--- a/SOAPClima/.classpath
+++ b/SOAPClima/.classpath
@@ -13,6 +13,7 @@
 	</classpathentry>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/Juampi/Desktop/SOAPClima/WebContent/WEB-INF/lib/java-json.jar"/>
 	<classpathentry exported="true" kind="lib" path="C:/Users/Juampi/Desktop/trabajo eclipse3/SOAP/WebContent/WEB-INF/lib/axis.jar"/>
 	<classpathentry exported="true" kind="lib" path="C:/Users/Juampi/Desktop/trabajo eclipse3/SOAP/WebContent/WEB-INF/lib/commons-discovery-0.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="C:/Users/Juampi/Desktop/trabajo eclipse3/SOAP/WebContent/WEB-INF/lib/commons-logging.jar"/>
